--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Donald L. Merand
 ---
 
-    <div class="noprint above-article">
-      <h1>5 Most Recent Articles</h1>
-      <ul>
-        {% for post in site.posts %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </div><!--above-article-->
+<section>
+  <h1>Articles</h1>
+    {% for post in site.posts %}
+      <div>
+        <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+      </div>
+    {% endfor %}
+</section>
