--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Donald L. Merand
   <h1>Articles</h1>
     {% for post in site.posts %}
       <div>
-        <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+        <span>{{ post.date | date_to_string }}</span> &rarr; <a href="{{ post.url }}">{{ post.title }}</a>
       </div>
     {% endfor %}
 </section>
