--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@ title: Donald L. Merand
 ---
 
 <section>
-  <h1>Articles</h1>
-    {% for post in site.posts %}
-      <div class="mv2">
-        <a href="{{ post.url }}">
-          {{ post.title }}
-        </a>
+  <h1 class="mt4 mb2">Articles</h1>
+  {% for post in site.posts %}
+    <div class="cf">
+      <div class="fl w4">{{ post.date | date: "%Y.%m.%d" }}</div>
+      <div class="fl">
+        <a href="{{ post.url }}">{{ post.title }}</a>
       </div>
-    {% endfor %}
+    </div>
+  {% endfor %}
 </section>
