--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 ---
 layout: default
-title: Donald L. Merand
 ---
 
 <section>
-  <h1 class="mt4 mb2">Articles</h1>
+  <h1>Articles</h1>
   {% for post in site.posts %}
-    <div class="cf">
-      <div class="fl w4">{{ post.date | date: "%Y.%m.%d" }}</div>
-      <div class="fl">
-        <a href="{{ post.url }}">{{ post.title }}</a>
-      </div>
+    <div class="flex-l mt3 mt0-l">
+      <div class="w4 lh-solid lh-copy-l">{{ post.date | date: "%Y.%m.%d" }}</div>
+      <div><a href="{{ post.url }}">{{ post.title }}</a></div>
     </div>
   {% endfor %}
 </section>
