--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
   <title>Dang</title>
   <link rel='alternate' type='application/atom+xml' title='Donald L. Merand' href='atom.xml'>
   <link rel='shortcut icon' href='/favicon.ico'>
-  <link rel='stylesheet' href='/assets/css/style.css' media='all' >
-  <link rel='stylesheet' href='/assets/css/plugins/syntax.css' media='all' >
-  <link rel='stylesheet' href='/assets/css/print.css' media='print' >
+  <link rel='stylesheet' href='assets/css/style.css' media='all' >
+  <link rel='stylesheet' href='assets/css/plugins/syntax.css' media='all' >
+  <link rel='stylesheet' href='assets/css/print.css' media='print' >
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Merriweather:900,300' media='all'>
 </head>
 
