--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <section>
   <h1>Articles</h1>
   {% for post in site.posts %}
-    <div class="flex-l mt3 mt0-l lh-solid lh-copy-l">
-      <div class="w4">{{ post.date | date: "%Y.%m.%d" }}</div>
+    <div class="md:flex mt-1">
+      <div class="w-36">{{ post.date | date: "%Y.%m.%d" }}</div>
       <div><a href="{{ post.url }}">{{ post.title }}</a></div>
     </div>
   {% endfor %}
