Add bass tuning, adjust TODO prompt, adjust algo in post

--- a/lib/unified-nps/src/template.html
+++ b/lib/unified-nps/src/template.html
@@ -61,6 +61,7 @@
                         <option value="perfect-fourths" selected>12-String Perfect 4ths</option>
                         <option value="standard-guitar">6-String Guitar</option>
                         <option value="bass-5-string">5-String Bass</option>
+                        <option value="bass-4-string">4-String Bass</option>
                     </select>
                 </div>
 
