Refactor NPS algo + preset management

--- a/lib/unified-nps/src/template.html
+++ b/lib/unified-nps/src/template.html
@@ -172,6 +172,8 @@
     <script src="core/musical-theory.js"></script>
     <script src="core/scale-patterns.js"></script>
     <script src="core/fretboard-algorithm.js"></script>
+    <script src="core/scale-visualizer.js"></script>
+    <script src="core/preset-manager.js"></script>
     
     <!-- Widget -->
     <script src="widget.js"></script>
