--- a/lib/unified-nps/src/template.html
+++ b/lib/unified-nps/src/template.html
@@ -174,6 +174,7 @@
     <script src="core/fretboard-algorithm.js"></script>
     <script src="core/scale-visualizer.js"></script>
     <script src="core/preset-manager.js"></script>
+    <script src="core/ui-controller.js"></script>
     
     <!-- Widget -->
     <script src="widget.js"></script>
